--- a/src/components/ChatroomContainer.css
+++ b/src/components/ChatroomContainer.css
@@ -1,4 +1,9 @@
-.main-container {
+.container {
   display: flex;
   flex-direction: row;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
 }
