--- a/src/components/ChatroomHeading.css
+++ b/src/components/ChatroomHeading.css
@@ -1,11 +1,11 @@
 .heading-container {
-  width: 100vw;
+  width: 20vw;
   background: linear-gradient(tomato, #e66465);
-  height: 7vh;
+  height: 10vh;
   color: aliceblue;
   justify-content: center;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
 
 }
