--- a/src/components/MessagesContainer.css
+++ b/src/components/MessagesContainer.css
@@ -2,5 +2,12 @@
   display: flex;
   flex-direction: column;
   width: 70vw;
-  margin: 0
+  margin: 0;
+  text-align: center;
+  background: aliceblue;
+}
+
+button {
+  background: linear-gradient(tomato, #e66465);
+  color: aliceblue;
 }
