--- a/src/components/SideMenu.css
+++ b/src/components/SideMenu.css
@@ -1,10 +1,10 @@
 .side-menu-container {
   width: 20vw;
-  height: 93vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   text-align: center;
-  background: linear-gradient(tomato, #e66465);
+  background: #ff5536;
   box-shadow: -1px 8px 70px -16px rgba(230,100,101,1);
   font-weight: 700;
   color: aliceblue;
