--- a/src/components/ChatroomContainer.css
+++ b/src/components/ChatroomContainer.css
@@ -7,3 +7,17 @@
   display: flex;
   flex-direction: column;
 }
+
+.messages-container {
+  display: flex;
+  flex-direction: column;
+  width: 70vw;
+  margin: 0;
+  text-align: center;
+  background: aliceblue;
+}
+
+button {
+  background: linear-gradient(tomato, #e66465);
+  color: aliceblue;
+}
