--- a/src/components/ChatroomContainer.css
+++ b/src/components/ChatroomContainer.css
@@ -11,9 +11,9 @@
 .messages-container {
   display: flex;
   flex-direction: column;
-  width: 70vw;
+  width: 100vw;
   margin: 0;
-  text-align: center;
+  /* text-align: center; */
   background: aliceblue;
 }
 
