--- a/src/components/LoginForm.css
+++ b/src/components/LoginForm.css
@@ -7,10 +7,16 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    color: #A39B99;
+}
+
+h1 {
+    font-weight: 600;
+    font-style: italic;
 }
 
 .login {
-    width: 80%;
+    width: 70%;
     text-align: center;
     justify-content: center;
 }
@@ -19,22 +25,27 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* border-bottom: 1px solid slategray; */
     align-items: center;
     position: relative;
-    /* border-radius: 5px; */
-    /* box-shadow: rgb(0, 0, 0) 0px 6px 15px -10px; */
 }
 
-.login_field > input {
-    border-bottom: 1px solid slategray;
-    box-shadow: rgb(0, 0, 0) 0px 6px 15px -10px;
+.login_field > .login_input {
+    border-bottom: 1px solid rgb(213,189,187);
+    box-shadow: rgb(223, 212, 211) 0px 6px 15px -5px;
     margin-right: 0;
+    bottom: 2px;
+    left: 3px;
+    position: relative;
 }
 
-input:focus {
+.login_field > .login_input::placeholder {
+    color: #DFD4D3;
+}
+
+.login_input:focus {
     outline: none;
-    box-shadow: rgb(0, 0, 0) 0px 6px 15px -10px;
+    box-shadow: rgb(223, 212, 211) 0px 6px 15px -5px;
+    text-align: center;
 }
 
 .login_button {
@@ -56,41 +67,19 @@ input:focus {
     width: 100px;
 }
 
-/* .button_container: {
-
-} */
-
-.button_container:hover .login_button {
-width: 225px;
-text-align: start;
+.button_container {
+    box-shadow: rgb(223, 212, 211) 0px 6px 15px -5px;
 }
 
-/* .login_button {
-    position: absolute;
-    right: 0;
-} */
+.button_container:hover .login_button {
+    width: 225px;
+    text-align: start;
+}
 
 
 .button_container:hover .login_button > span {
     opacity: 1;
     transform: translate(0, 0)
-    /* visibility: visible; */
 }
-
-@keyframes sliding {
-    from {
-        right: 0
-    }
-    to {
-        left: 0;
-    }
-}
-
-
-
-
-/* .login_button:active {
-    animation: submitting
-} */
 
 
