--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body,
 #root {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'IBM Plex Serif', serif;
   height: 100%;
 }
 
